# project-2_Luzanchuk_B25-515

./: .gitignore  Makefile  README.md  metadata.json  pyproject.toml
data/: users.json
src/database_cli/: core.py  decorators.py  engine.py  main.py  parser.py  utils.py
src/primitive_db/: core.py  engine.py  main.py  utils.py
