[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "primitive_db"
version = "0.1.1"
description = "Primitive Database"
authors = [{name = "Luzanchuk_B25-515"}]
requires-python = ">=3.9"

packages = [{ include = "src" },]

[tool.poetry.scripts]
project = "primitive_db.main:main"

[tool.poetry.dependencies]
prompt = "^0.4.1"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[dependency-groups]
dev = [
    "ruff (>=0.15.0,<0.16.0)"
]
