[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "primitive_db"
version = "0.1.3"
description = "Primitive Database"
readme = "README.md"
license = "MIT"
authors = [{name = "Luzanchuk_B25-515"}]
requires-python = ">=3.9"
keywords = ["database", "cli", "sql", "relational"]

packages = [{ include = "src" },]

[tool.poetry.scripts]
database = "primitive_db.main:main"

[tool.poetry.dependencies]
prompt = "^0.4.1"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[dependency-groups]
dev = [
    "ruff (>=0.15.0,<0.16.0)"
]
