[tool.poetry]
name = "database-cli"
version = "0.2.0"
description = "Простая реляционная база данных с CLI интерфейсом"
authors = ["Luzanchuk_B25-515"]
readme = "README.md"
license = "MIT"
keywords = ["database", "cli", "sql", "relational"]

packages = [{ include = "database_cli", from = "src" }]


[tool.poetry.dependencies]
python = "^3.10"
prettytable = "^3.17.0"
prompt = "^0.4.1"

[tool.poetry.scripts]
database = "database_cli.main:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.0"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"